0.7.0
 - BREAKING CHANGE: piezo height is now loaded as "calibrated" and
   not as "nominal" (JPK file format)
 - ref: restructured meta data organization
0.6.0
 - feat: force-distance metadata can now be saved and loaded for
   the .tab file format (#3)
 - feat: implement new HDF5-based file format (read/write)
 - feat: support piezo height (JPK file format)
 - enh: improve parsing of JPK files (#1)
0.5.2
 - ref: drop pandas dependency (#2)
0.5.1
 - fix: allow "force-modulation" feedback mode
0.5.0
 - feat: meta data summary with `MetaData.get_summary`
0.4.1
 - ref: group meta data by topic
 - fix: identifier in JPK file format was actually session identifier
0.4.0
 - BREAKING CHANGE: change metadata key names 
 - enh: add class for checking metadata
0.3.0
 - feat: support tab-separated values file format (*.tab)
 - fix: file formats were not registered correctly
 - ref: derive file format errors from own error classes
0.2.0
 - compatibility changes towards nanite
0.1.0
 - initial version